cmake_minimum_required(VERSION 3.8)
project(aoc)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)

add_executable(day1 day1.cpp)
add_executable(day2 day2.c)
add_executable(day3 day3.c)
add_executable(day4 day4.c)
add_executable(day5 day5.c)
add_executable(day6 day6.c)
add_executable(day7 day7.c)
add_executable(day8 day8.c)
